POST /api/v1/logger/category/{category}
